--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.app div{
+    position: relative;
 }
 
 .board{
@@ -16,6 +21,16 @@
   height: calc(64px * 8);
   display: flex;
   flex-wrap: wrap;
+}
+
+.restart{
+    position: absolute;
+    z-index: 999;
+    right: 0;
+    background-color: rgb(238, 176, 189);
+    border-radius: 10px;
+    width: 100px;
+    height: 20px;
 }
 
 .cell{
